Fixed header buton color in dark mode

--- a/upsonic_on_prem/dash/static/css/dark_mode.css
+++ b/upsonic_on_prem/dash/static/css/dark_mode.css
@@ -292,3 +292,10 @@
   [data-bs-theme=dark] .header_text_active {
     color: #ffffff;
   }
+
+
+
+  [data-bs-theme=dark] .custom_header_button{
+  color: #fff;
+
+}
